@@ -2,8 +2,10 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.36 [20130120] [svn: r477]
+Changelog for sg3_utils-1.36 [20130124] [svn: r478]
   - sg_lib: improve snprintf handling
+  - sg_vpd: Protocol-specific port information VPD page for
+    SAS SSP, persistent connection (spl3r2)
 
 Changelog for sg3_utils-1.35 [20130117] [svn: r476]
   - sg_compare_and_write: new utility
